--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,30 @@
 	<head>
 		<title>issheintome</title>
 		<link href = "{{ STATIC_URL }}/css/style.css" rel="stylesheet" type="text/css" />
+		<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+
 
 	</head>
-	<body>
+	<body> 
+		<div id = "header">
+			<h1>Is She Into Me?<h1>
+		</div>
+
 		<div id = "content_box">
-			fd
+			<h2>hello worldddddddddddd</h2>
+			<div id="fb-root"></div>
+
+			<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
 		</div>
 
 		<div id = "footer">
 
 		</div>
 
+		
+
+		<script type="text/javascript" src="{{ STATIC_URL }}/js/main.js"></script>
 
 
 	</body>
