--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>issheintome</title>
-		<link href = "{{ STATIC_URL }}/css/style.css" rel="stylesheet" type="text/css" />
+		<link href = "{{ STATIC_URL }}css/style.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 
@@ -25,7 +25,7 @@
 
 		
 
-		<script type="text/javascript" src="{{ STATIC_URL }}/js/main.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
 
 
 	</body>
