Update to new FB sdk

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
 		<div id = "content_box">
 			<h2>hello worldddddddddddd</h2>
 			<div id="fb-root"></div>
-
-			<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+			<h2>Updated JS SDK example</h2><br />
+			<div id="user-info"></div>
+			<p><button id="fb-auth">Login</button></p>
 		</div>
 
 		<div id = "footer">
