--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,12 @@
 
 		<div id = "content_box">
 			<h2>Login to Facebook and agree to permissions!
-			<br>
-				<div id="fb-root"></div>
-				<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
-
-
-
 			</h2>
-				<!-- Facebook Stuff -->
-			<img class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
+
+			<div id="user-info"></div>
+
+			<!-- Facebook Button -->
+			<img id="fb-auth" class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
 
 			<!-- <h2>
 				Choose a friend:
@@ -37,7 +34,8 @@
 		</div>
 
 		
-
+		<!-- Loads facebook script and iframes -->
+		<div id="fb-root"></div>
 		<script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
 
 
