--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,13 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
-			<h2>Login to Facebook and agree to permissions!
-			</h2>
 
-			<div id="user-info"></div>
+			<h2>Login to Facebook and agree to permissions!</h2>
+
+			
 
 			<!-- Facebook Button -->
+			<div id="user-info"></div>
 			<img id="fb-auth" class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
 
 			<!-- <h2>
