--- a/templates/index.html
+++ b/templates/index.html
@@ -15,20 +15,22 @@
 				<h1>is she into me?<h1>
 			</div>
 
-			<p>Login to Facebook and agree to permissions!</p>
-
-			
-
-			<!-- Facebook Button -->
-			<div id="user-info"></div>
-			<img id="fb-auth" class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
+			<div id = "authentication">
+				<!-- Facebook Button -->
+				<p>Login to Facebook and agree to permissions!</p>
+				<div id="user-info"></div>
+				<img id="fb-auth" class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
+			</div>
 
 			<div id = "choose-friend">
 				<p>Choose a friend:</p>
 					<input class = "textarea" type="text"></input>
 			</div>
 			
+			
 		</div>
+
+		
 
 		
 		<!-- Loads facebook script and iframes -->
@@ -38,7 +40,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script>
 			$(document).ready(function(){
-			 
+				// $("#authentication").fadeOut(3000);
 			    $("#choose-friend").fadeIn(3000);
 			});
 		</script>
