--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,8 +51,8 @@ html , body{
 }
 
 .textarea {
-	background: #8F4D27;
-	border: 1px solid #999;
+	background: #75442a;
+	border: 1px solid #75442a;
 	outline: 0;
 	font-family: 'Crete Round', serif;
 	display:block;
