--- a/templates/index.html
+++ b/templates/index.html
@@ -15,16 +15,10 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
-
-			<div id = "authentication">
 				<!-- Facebook Button -->
-				<img id="fb-auth" class = "centered" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200">
-			</div>
-
-			<div id = "choose-friend">
-				<p>Choose a friend:</p>
-					<input class = "textarea" type="text"></input>
-			</div>
+				<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
+				
+				<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
 			
 			
 		</div>
