--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,15 @@
 			</div>
 				<!-- Facebook Button -->
 				<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
-				
+
+				<!-- Logged in -->
+				<img id="fb-auth2" src = "{{ STATIC_URL }}img/logged-in.png" height = "200" width = "200" />
+
+				<!-- Choose Friend Button -->
 				<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
+
+				<!-- Friend Chosen -->
+				<img id = "choose-friend2" src = "{{ STATIC_URL }}img/chosen-friend.png" height = "200" width = "200" />
 			
 			
 		</div>
