--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,7 @@ html , body{
 
 
 #content_box{
+	margin: 0px;
 	position: relative;
 	height: auto;
 	width: 50%;
@@ -40,12 +41,22 @@ html , body{
 	display:block;
 }
 
+#container1{
+	position:relative;
+	margin:0px;
+}
+
+#container2{
+	position:relative;
+}
+
 #authentication{
 	display:block;
 }
 
 #fb-auth { 
 	display: inline;
+	/*opacity: 0.3;*/
 	-webkit-filter: drop-shadow(-10px 5px 0px #222); 
 	filter: drop-shadow(-10px 5px 0px #222); 
 	margin: 15px 15px 15px 15px;
@@ -53,10 +64,13 @@ html , body{
 
 #fb-auth2 { 
 	display: inline;
+	/*opacity: 0.3;*/
+	position:absolute;
+	top:0px;
+	left:0px;
 	-webkit-filter: drop-shadow(-10px 5px 0px #222); 
 	filter: drop-shadow(-10px 5px 0px #222); 
 	margin: 15px 15px 15px 15px;
-	z-index: -1;
 }
 
 #choose-friend {
@@ -64,16 +78,17 @@ html , body{
 	-webkit-filter: drop-shadow(-10px 5px 0px #c6982b); 
 	filter: drop-shadow(-10px 5px 0px #c6982b);
 	margin: 15px 15px 15px 15px;
-
 }
 
 #choose-friend2 {
+	
 	display:inline;
+	position: absolute;
+	top:0px;
+	left:0px;
 	-webkit-filter: drop-shadow(-10px 5px 0px #c6982b); 
 	filter: drop-shadow(-10px 5px 0px #c6982b);
 	margin: 15px 15px 15px 15px;
-	z-index: -1;
-
 }
 
 .textarea {
