--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,14 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
-				<div id = "container1">
+				<div id = "connect-container">
 					<!-- Facebook Button -->
 					<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
 
 					<img id="fb-auth2" src = "{{ STATIC_URL }}img/logged-in.png" height = "200" width = "200" />
 				</div>
 
-				<div id = "container2">
+				<div id = "friend-container">
 					<!-- Choose Friend Button -->
 					<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
 
