Fix floating of buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,15 +55,14 @@ html , body{
 }
 
 #connect-container{
-	display: inline;
+	float: left;
 }
 
 #friend-container{
-	display: inline;
+	float: left;
 }
 
 #fb-auth { 
-	display: inline;
 	/*opacity: 0.3;*/
 	-webkit-filter: drop-shadow(-10px 5px 0px #222); 
 	filter: drop-shadow(-10px 5px 0px #222); 
@@ -82,14 +81,12 @@ html , body{
 }
 
 #choose-friend {
-	display:inline;
 	-webkit-filter: drop-shadow(-10px 5px 0px #c6982b); 
 	filter: drop-shadow(-10px 5px 0px #c6982b);
 	margin: 15px 15px 15px 15px;
 }
 
 #choose-friend2 {
-	
 	display: none;
 	position: absolute;
 	top:0px;
