--- a/templates/index.html
+++ b/templates/index.html
@@ -17,19 +17,20 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
-				<div id = "connect-container">
-					<!-- Facebook Button -->
-					<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
+			<div id = "connect-container">
+				<!-- Facebook Button -->
+				<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
 
-					<img id="fb-auth2" src = "{{ STATIC_URL }}img/logged-in.png" height = "200" width = "200" />
-				</div>
+				<img id="fb-auth2" src = "{{ STATIC_URL }}img/logged-in.png" height = "200" width = "200" />
+			</div>
 
-				<div id = "friend-container">
-					<!-- Choose Friend Button -->
-					<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
+			<div id = "friend-container">
+				<!-- Choose Friend Button -->
+				<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
 
-					<img id = "choose-friend2" src = "{{ STATIC_URL }}img/chosen-friend.png" height = "200" width = "200" />
-				</div>
+				<img id = "choose-friend2" src = "{{ STATIC_URL }}img/chosen-friend.png" height = "200" width = "200" />
+			</div>
+			<div class="spacer" style="clear: both;"></div>
 		</div>
 
 		<!-- Markup for These Days Friend Selector -->
