--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,8 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
-			<img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" />
-			<img id="fb-auth2" src = "{{ STATIC_URL }}img/logged-in.png" height = "200" width = "200" />
-			<img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" />
-			<img id = "choose-friend2" src = "{{ STATIC_URL }}img/chosen-friend.png" height = "200" width = "200" />
+			<div id="authentication"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
+			<div id="find-friend"><img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
 		</div>
 
