Animate sentiment percentage update

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 			</div>
 			<div id="authentication"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
 			<div id="find-friend"><img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
+			<div id="percentage"><span id="sentiment">0</span>%</div>
 			<div class="spacer" style="clear: both;"></div>
 		</div>
 
