--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,14 @@
 			<div id = "header">
 				<h1>is she into me?<h1>
 			</div>
+
 			<div id="authentication"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
+
 			<div id="find-friend"><img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
-			<div id="percentage"><span id="sentiment">0</span>%</div>
+
+			<img id="percentage" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
+			<span id="sentiment">0%</span>
+
 			<div id="share"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
 		</div>
