--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 			<img id="percentage" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
 			<span id="sentiment">0%</span>
 
-			<div id="share"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
+			<div id="shared"><img id="share" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
 		</div>
 
