--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
 
 			<div id="find-friend"><img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
 
-			<img id="percentage" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
-			<span id="sentiment">0%</span>
+			<div id="percentage"><img id="percentage-img" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
+			<span id="percentage-num"><span id="sentiment">0</span>%</span></div>
 
 			<div id="shared"><img id="share" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
