--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,14 @@
 				<h1>is she into me?<h1>
 			</div>
 
-			<div id="authentication"><img id="fb-auth" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
+			<div id="auth"><img id="auth-img" src = "{{ STATIC_URL }}img/fbbutton.png" height = "200" width = "200" /></div>
 
-			<div id="find-friend"><img id = "choose-friend" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
+			<div id="find-friend"><img id = "find-friend-img" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
 
 			<div id="percentage"><img id="percentage-img" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
 			<span id="percentage-num"><span id="sentiment">0</span>%</span></div>
 
-			<div id="shared"><img id="share" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
+			<div id="share"><img id="share-img" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
 		</div>
 
