Add messages below main div
Shows an error when you try to check someone you haven't talked to in
forever.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,14 @@ html , body{
 	display:block;
 }
 
+#message{
+	position: absolute;
+	width: 100%;
+	font-size: 50px;
+	text-align: center;
+	bottom: -75px;
+}
+
 #auth, #find-friend, #percentage, #share{
 	float: left;
 	margin: 15px;
