--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,11 @@
 
 			<div id="share" class="black"><img id="share-img" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
 			<div class="spacer" style="clear: both;"></div>
+
+			<div id="message"></div>
 		</div>
+
+
 
 		<!-- Markup for These Days Friend Selector -->
 		<div id="TDFriendSelector">
