--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,7 @@ html , body{
 	font-size: 50px;
 	text-align: center;
 	bottom: -180px;
+	color: #8F4D27;
 }
 
 #auth, #find-friend, #percentage, #share{
