Set autodeselection to true

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 			<div id="find-friend" class="black"><img id = "find-friend-img" src = "{{ STATIC_URL }}img/choose-friend.png" height = "200" width = "200" /></div>
 
-			<div id="percentage" class="black"><img id="percentage-img" src = "{{ STATIC_URL }}img/percent-button.png" height = "200" width = "200" />
+			<div id="percentage" class="black">
 			<span id="percentage-num"><span id="sentiment">0</span>%</span></div>
 
 			<div id="share" class="black"><img id="share-img" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
