--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,13 @@
 			<div class="spacer" style="clear: both;"></div>
 
 			<div id="message"></div>
-			
+			</div>
+
+			<div id = "footer">
+				IsSheIntoMe was designed and built by 
+				<a href src = "smithamilli.com">Smitha Milli</a>
+				and 
+				<a href src = "www.linkedin.com/pub/jessica-chang/57/342/280/"> Jessica Chang </a>.
 			</div>
 
 
