--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,13 @@ html , body{
 	
 }
 
+#footer{
+	position: absolute;
+	bottom: 10px;
+	padding: 5px;
+	font-family: 'Crete Round', serif;
+
+}
 
 #content_box{
 	margin: 0px;
@@ -42,7 +49,7 @@ html , body{
 }
 
 #message{
-	font-family: 'Crete Round';
+	font-family: 'Crete Round', serif;
 	position: absolute;
 	width: 100%;
 	font-size: 50px;
