--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,9 @@
 
 			<div id = "footer">
 				By
-				<a href src = "smithamilli.com">Smitha Milli</a>
+				<a href src = "http://www.smithamilli.com">Smitha Milli</a>
 				and 
-				<a href src = "www.linkedin.com/pub/jessica-chang/57/342/280/"> Jessica Chang </a>.
+				<a href src = "http://www.linkedin.com/pub/jessica-chang/57/342/280/"> Jessica Chang </a>.
 			</div>
 
 
