--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@ html , body{
 }
 
 #footer{
-	position: absolute;
+	position: fixed;
 	bottom: 10px;
 	padding: 5px;
 	font-family: 'Crete Round', serif;
