--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,13 @@ html , body{
 	bottom: 10px;
 	padding: 5px;
 	font-family: 'Crete Round', serif;
+	color: #42575E;
 
+}
+
+#footer a {
+	text-decoration: none;
+	color: #BC674A;
 }
 
 #content_box{
