--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,23 +49,23 @@ html , body{
 	margin: 0px;
 	position: relative;
 	height: auto;
-	width: 75%;
-	left: 9%;
-	/*background-color: #8F4D27;
+	width: 60%;
+	left: 15%;
+	background-color: #8F4D27;
 	border: 5px solid;
-	border-color:  #FFFFFF;*/
+	border-color:  #FFFFFF;
 	padding: 20px;
 	display:block;
 }
 
 #message{
-	margin: 10px;
 	font-family: 'Crete Round', serif;
+	position: absolute;
 	width: 100%;
-	font-size: 24px;
-	font-weight: lighter;
+	font-size: 30px;
 	text-align: center;
-	color: #fff;
+	bottom: -180px;
+	color: #8F4D27;
 }
 
 #auth, #find-friend, #percentage, #share{
