--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 				<div id="share" class="black"><img id="share-img" class="button" src = "{{ STATIC_URL }}img/share.png" height = "200" width = "200" /></div>
 				<div class="spacer" style="clear: both;"></div>
 
-				<div id="message">We use sentiment analysis to determine how interested your friend is in you.  Try it out!</div>
+				<div id="message"></div>
 			</div>
 
 			<div id = "footer">
