--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body> 
 		
