Try adding icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,10 @@
 
 <html>
 	<head>
-		<title>issheintome</title>
+		<title>Is She Into Me?</title>
 		<link href = "{{ STATIC_URL }}css/style.css" rel="stylesheet" type="text/css" />
 		<link href = "{{ STATIC_URL }}css/tdfriendselector.css" rel="stylesheet" type="text/css" />
+		<link href="{{ STATIC_URL }}img/heart16x16.png" rel="icon" type="image/png" />
 		<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 
