--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 			</div>
 
 			<div id = "footer">
-				<a href="https://github.com/smilli/issheintome">Github</a>
+				<a href="https://github.com/smilli/issheintome">Github</a> <br>
 				By
 				<a href="http://www.smithamilli.com">Smitha Milli</a>
 				and 
