--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,12 @@
 
 <html>
 	<head>
-		<title>issheintome</title>
+		<title>Is She Into Me?</title>
 		<link href = "{{ STATIC_URL }}css/style.css" rel="stylesheet" type="text/css" />
 		<link href = "{{ STATIC_URL }}css/tdfriendselector.css" rel="stylesheet" type="text/css" />
-		<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-		<link rel="icon" type="image/png"
-     href="{{ STATIC_URL }}img/heart.png" />
+		<link href='//fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
+		<meta name = "description" content="Ever wanted to find out how your romantic interest feels about you? IsSheIntoMe uses sentiment analysis of your facebook conversations with your romantic interest to give you back an interest score.">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -72,9 +71,6 @@
 			</div>
 		</div>
 
-		
-
-		
 		<!-- Loads facebook script and iframes -->
 		<div id="fb-root"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
