--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Is She Into Me?</title>
 		<link href = "{{ STATIC_URL }}css/style.css" rel="stylesheet" type="text/css" />
-		<link href = "{{ STATIC_URL }}css/tdfriendselector.css" rel="stylesheet" type="text/css" />
+		<link href = "{{ STATIC_URL }}css/jquery.friend.selector-1.2.1.css" rel="stylesheet" type="text/css" />
 		<link href='//fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 		<meta name = "description" content="Ever wanted to find out how your romantic interest feels about you? IsSheIntoMe uses sentiment analysis of your facebook conversations with your romantic interest to give you back an interest score.">
@@ -41,40 +41,10 @@
 			</div>
 		</div>
 
-
-
-		<!-- Markup for These Days Friend Selector -->
-		<div id="TDFriendSelector">
-			<div class="TDFriendSelector_dialog">
-				<a href="#" id="TDFriendSelector_buttonClose">x</a>
-				<div class="TDFriendSelector_form">
-					<div class="TDFriendSelector_header">
-						<p>Select your friends</p>
-					</div>
-					<div class="TDFriendSelector_content">
-						<p>Then you can invite them to join you in the app.</p>
-						<div class="TDFriendSelector_searchContainer TDFriendSelector_clearfix">
-							<div class="TDFriendSelector_selectedCountContainer"><span class="TDFriendSelector_selectedCount">0</span> / <span class="TDFriendSelector_selectedCountMax">0</span> friends selected</div>
-							<input type="text" placeholder="Search friends" id="TDFriendSelector_searchField" />
-						</div>
-						<div class="TDFriendSelector_friendsContainer"></div>
-					</div>
-					<div class="TDFriendSelector_footer TDFriendSelector_clearfix">
-						<a href="#" id="TDFriendSelector_pagePrev" class="TDFriendSelector_disabled">Previous</a>
-						<a href="#" id="TDFriendSelector_pageNext">Next</a>
-						<div class="TDFriendSelector_pageNumberContainer">
-							Page <span id="TDFriendSelector_pageNumber">1</span> / <span id="TDFriendSelector_pageNumberTotal">1</span>
-						</div>
-						<a href="#" id="TDFriendSelector_buttonOK">OK</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
 		<!-- Loads facebook script and iframes -->
 		<div id="fb-root"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="{{ STATIC_URL }}js/tdfriendselector.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.friend.selector-1.2.1.min.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
 		<script>
 		 // 	$(document).ready(function(){
