Actually fix cursors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,9 +172,12 @@ html , body{
 }
 
 /* creates darkened effect on buttons */
-#content_box .black {
+.black {
 	background: url('../img/black.png') no-repeat;
 	opacity: 0.2;
+}
+
+.black img{
 	cursor: default;
 }
 
