Change colors of box bg/header/msg

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,7 +208,7 @@ html , body{
 
 h1{
 	font-family: 'Lily Script One', cursive;
-	color: #8F4D27;
+	color: #BF4D28;
 	font-weight: normal;
 	text-shadow: 
 		 -1px 1px #E5E5E5,
