change app id to test app id

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ html , body{
 	width: auto;
 	max-width: 58em;
 	left: 15%;
-	background-color: #8F4D27;
+	background-color: #BF4D28;
 	border: 5px solid;
 	border-color:  #FFFFFF;
 	padding: 20px;
