--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ html , body{
 	width: auto;
 	max-width: 58em;
 	left: 15%;
-	background-color: #BF4D28;
+	background-color: #8F4D27;
 	border: 5px solid;
 	border-color:  #FFFFFF;
 	padding: 20px;
@@ -208,7 +208,7 @@ html , body{
 
 h1{
 	font-family: 'Lily Script One', cursive;
-	color: #BF4D28;
+	color: #8F4D27;
 	font-weight: normal;
 	text-shadow: 
 		 -1px 1px #E5E5E5,
