test minified version

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 		<!-- Loads facebook script and iframes -->
 		<div id="fb-root"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.friend.selector.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.friend.selector-1.2.1.min.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
 		<script>
 		 // 	$(document).ready(function(){
