--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,6 @@
 			</div>
 
 			<div id = "footer">
-				<a href="https://github.com/smilli/issheintome">Github</a> <br>
 				By
 				<a href="http://www.smithamilli.com">Smitha Milli</a>
 				and 
@@ -44,7 +43,7 @@
 		<!-- Loads facebook script and iframes -->
 		<div id="fb-root"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.friend.selector-1.2.1.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.friend.selector-1.2.1.min.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
 		<script>
 		 // 	$(document).ready(function(){
